objects/spExams__Exam__c.object
<CustomObject>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>spExams__Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exam Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>spExams__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration</label>
        <referenceTo>spExams__Configuration__c</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>spExams__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>spExams__Domain_Question__c</fullName>
        <label>Domain Question</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>spExams__Exam_Duration__c</fullName>
        <label>Exam Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>spExams__Exam_Question__c</fullName>
        <label>Exam Question</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>spExams__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>spExams__No_of_Questions__c</fullName>
        <label>No of Questions</label>
        <summaryForeignKey>spExams__Exam_Question__c.spExams__Exam__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>spExams__No_of_Recipients__c</fullName>
        <label>No of Recipients</label>
        <summaryForeignKey>spExams__User_Exam__c.spExams__Exam__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>spExams__Passing_Score__c</fullName>
        <label>Passing Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>spExams__Save_Before_Next__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save Before Next</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>spExams__Show_Results_Upon_Submission__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Results Upon Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>spExams__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>spExams__Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>spExams__Type_According_to_No_of_Question__c</fullName>
        <label>Type According to No of Question</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same No</fullName>
                    <default>true</default>
                    <label>Same No</label>
                </value>
                <value>
                    <fullName>Specific value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Exam</label>
    <listViews>
        <fullName>spExams__All</fullName>
        <columns>NAME</columns>
        <columns>spExams__Title__c</columns>
        <columns>spExams__Admin__c</columns>
        <columns>spExams__Description__c</columns>
        <columns>spExams__Domain_Question__c</columns>
        <columns>spExams__Exam_Duration__c</columns>
        <columns>spExams__Exam_Question__c</columns>
        <columns>spExams__Passing_Score__c</columns>
        <columns>spExams__Status__c</columns>
        <columns>spExams__Expiration_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>spExams__Type_According_to_No_of_Question__c</columns>
        <columns>spExams__No_of_Questions__c</columns>
        <columns>spExams__Configuration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>spExams__Draft_Exams</fullName>
        <columns>NAME</columns>
        <columns>spExams__Title__c</columns>
        <columns>spExams__Admin__c</columns>
        <columns>spExams__Description__c</columns>
        <columns>spExams__Domain_Question__c</columns>
        <columns>spExams__Exam_Duration__c</columns>
        <columns>spExams__Exam_Question__c</columns>
        <columns>spExams__Passing_Score__c</columns>
        <columns>spExams__Status__c</columns>
        <columns>spExams__Expiration_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>spExams__Configuration__c</columns>
        <columns>spExams__Type_According_to_No_of_Question__c</columns>
        <columns>spExams__No_of_Questions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>spExams__Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft Exams</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Exam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>